// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatchBuilder type changes object to array 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "items": {
          "default": "",
          "type": "string",
        },
        "type": "array",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "object",
      "toType": "array<string>",
    },
  },
]
`;

exports[`PatchBuilder type changes object to primitive 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "default": "",
        "type": "string",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "object",
      "toType": "string",
    },
  },
]
`;

exports[`PatchBuilder type changes primitive to array 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "items": {
          "default": "",
          "type": "string",
        },
        "type": "array",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "string",
      "toType": "array<string>",
    },
  },
]
`;

exports[`PatchBuilder type changes primitive to object 1`] = `
[
  {
    "fieldName": "field",
    "patch": {
      "op": "replace",
      "path": "/properties/field",
      "value": {
        "additionalProperties": false,
        "properties": {
          "nested": {
            "default": "",
            "type": "string",
          },
        },
        "required": [
          "nested",
        ],
        "type": "object",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "string",
      "toType": "object",
    },
  },
]
`;
